--- a/table.html
+++ b/table.html
@@ -96,7 +96,7 @@
     <br>
     <br>
     <br><br>
-    <a href="./assesment2.html">Go Back</a>
+    <a href="./index.html">Go Back</a>
     
 </body>
 </html>
